--- a/index.html
+++ b/index.html
@@ -18,20 +18,46 @@
       <li></li>
       <li></li>
       <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
 
     <article class="swiper-wrapper">
       <div class="swiper-slide">
-        <div class="inner">Company</div>
+        <div class="inner">
+          <h1>Mon.</h1>
+        </div>
       </div>
       <div class="swiper-slide">
-        <div class="inner">about</div>
+        <div class="inner">
+          <h1>Tue.</h1>
+        </div>
       </div>
       <div class="swiper-slide">
-        <div class="inner">Information</div>
+        <div class="inner">
+          <h1>Wed</h1>
+        </div>
       </div>
       <div class="swiper-slide">
-        <div class="inner">News</div>
+        <div class="inner">
+          <h1>Thu.</h1>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="inner">
+          <h1>Fri.</h1>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="inner">
+          <h1>Sat.</h1>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="inner">
+          <h1>Sun.</h1>
+        </div>
       </div>
     </article>
     <div class="swiper-button-prev"></div>
